[package]
name = "ebyte-test-f4"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
#ebyte-e32 = { path = "../ebyte-e32-rs" }
ebyte-e32 = { git = "https://github.com/barafael/ebyte-e32-rs" }
nb = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[dependencies.stm32f4xx-hal]
features = ["rt", "stm32f411"]
version = "0.12.0"
